some more mob stuff